--- a/css/components/services.css
+++ b/css/components/services.css
@@ -7,9 +7,6 @@
     display: inline-block;
     width: 100%;
     text-align: center;
-    font-size: 25px;
-    font-weight: 700;
-    text-transform: capitalize;
     padding-bottom: 40px;
     padding-top: 40px;
 }
